article/study not translated to FR are returned as EN
